--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -8,7 +8,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <title> Personvern </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="gdpr.css">
 </head>
 
@@ -19,15 +19,15 @@
             <div class="logo">
                 <p>
 
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index/index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-                    <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="spill.html">SPILL</a></li>
-                    <li><a href="om-oss.html">OM OSS</a></li>
+                    <li><a href="universiell_utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="gdpr/gdpr.html">GDPR</a></li>
+                    <li><a href="spill/spill.html">SPILL</a></li>
+                    <li><a href="om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,7 +45,7 @@
 
         <div id="GDPR">
             <div class="image-container">
-                <img src="bilder/GDPR-logo.png" alt="Felles bilde" id="main-image">
+                <img src="../bilder/GDPR-logo.png" alt="Felles bilde" id="main-image">
                 <div class="overlay"></div>
             </div>
 
@@ -127,7 +127,7 @@
         </section>
 
 
-        <img id="arrow" src="bilder/arrow.png" alt="arrow">
+        <img id="arrow" src="../bilder/arrow.png" alt="arrow">
         <section id="cookies" class="hidden">
             <h2>Cookies</h2>
             <br>
@@ -184,7 +184,7 @@
         </div>
     </footer>
 
-    <script src="script-gdpr.js"></script>
+    <script src="gdpr/script-gdpr.js"></script>
 </body>
 
 </html>
