--- a/index/index.html
+++ b/index/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="slideshow.css">
     <link rel="stylesheet" href="index.css">
     <title>SoMe-prosjekt</title>
@@ -26,10 +26,10 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-                    <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="spill.html">SPILL</a></li>
-                    <li><a href="om-oss.html">OM OSS</a></li>
+                    <li><a href="universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="gdpr/gdpr.html">GDPR</a></li>
+                    <li><a href="spill/spill.html">SPILL</a></li>
+                    <li><a href="om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
@@ -156,7 +156,7 @@
             </div>
 
             <div>
-                <img src="bilder/bruk-hue-logo.png" alt="bruk hue logo">
+                <img src="../bilder/bruk-hue-logo.png" alt="bruk hue logo">
                 <p> <b> Bruk hue </b> </p>
                 <p> Bruk hue er et gratis undervisningsopplegg utviklet av Telenor og Røde kors for å forebygge
                     nettmobbing og utenforskap. Bruk hue jobber for å nå barn, foreldre, lærere og frivillige, slik at
@@ -165,7 +165,7 @@
             </div>
 
             <div>
-                <img src="bilder/slett-meg.jpeg" alt="slett meg logo">
+                <img src="../bilder/slett-meg.jpeg" alt="slett meg logo">
                 <p> <b> Slett meg </b> </p>
                 <p> Slettmeg.no er en tjeneste som tilbyr gratis råd og veiledning til å slette personlig informasjon
                     fra ulike internettjenester og gi råd om personvern og digitale rettigheter. Hvis man får uønskede
@@ -174,7 +174,7 @@
             </div>
 
             <div>
-                <img src="bilder/kors-paa-halsen.jpeg" alt="kors på halsen logo">
+                <img src="../bilder/kors-paa-halsen.jpeg" alt="kors på halsen logo">
                 <p> <b> Kors på halsen </b> </p>
                 <p> Kors på halsen er et gratis og anonymt samtaletilbud der du som er opp til 18 år kan snakke med en
                     trygg voksen om akkurat det du har på hjertet. Noen ganger kan det være enklere å snakke med en som
