--- a/universiell-utforming/universiell_utforming.html
+++ b/universiell-utforming/universiell_utforming.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -23,10 +23,10 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-                    <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="spill.html">SPILL</a></li>
-                    <li><a href="om-oss.html">OM OSS</a></li>
+                    <li><a href="universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="gdpr/gdpr.html">GDPR</a></li>
+                    <li><a href="spill/spill.html">SPILL</a></li>
+                    <li><a href="om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
@@ -67,7 +67,7 @@
                     <h5> Trykk på ikonet for å se hva som blir lest opp for svaksynte</h5>
                 </div>
                 <div class="bak">
-                    <img src="bilder/dssds.png" alt="Et bilde av et øye som er blått">
+                    <img src="../bilder/dssds.png" alt="Et bilde av et øye som er blått">
                     <!-- Semantic Icon with Accessible Markup -->
                     <i aria-hidden="true" class="fa-solid fa-arrow-right" title="Pil som peker mot høyre"></i>
                     <span class="sr-only"> Pil som peker mot høyre </span>
@@ -118,7 +118,7 @@
                 </p>
             </div>
             <div>
-                <audio src="audio/happy_song.mp3" loop id="horsel_musikk"></audio>
+                <audio src="../audio/happy_song.mp3" loop id="horsel_musikk"></audio>
                 <i class="fa-solid fa-headphones ikon_musikk" onclick="AvPaaMusikk()"></i>
                 <h5 id="musikk_h5">Trykk på ikonet for å spille av lyd</h5>
             </div>
