--- a/om-oss/om-oss.html
+++ b/om-oss/om-oss.html
@@ -27,10 +27,10 @@
       </div>
       <div class="right-sections">
         <ul>
-          <li><a href="universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-          <li><a href="gdpr.html">GDPR</a></li>
-          <li><a href="spill.html">SPILL</a></li>
-          <li><a href="om-oss.html">OM OSS</a></li>
+          <li><a href="universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+          <li><a href="gdpr/gdpr.html">GDPR</a></li>
+          <li><a href="spill/spill.html">SPILL</a></li>
+          <li><a href="om-oss/om-oss.html">OM OSS</a></li>
         </ul>
       </div>
     </nav>
@@ -49,7 +49,7 @@
         Vi tror på å skape et trygt og inkluderende digitalt miljø for alle.
       </p>
 
-      <img src="bilder/mannmedmobil.webp"> <br>
+      <img src="../bilder/mannmedmobil.webp"> <br>
 
       <button id="toggle-button">Vis mer info</button>
 
