--- a/spill/spill.html
+++ b/spill/spill.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="spill.css">
     <title>SoMe-prosjekt</title>
 </head>
@@ -23,10 +23,10 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-                    <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="spill.html">SPILL</a></li>
-                    <li><a href="om-oss.html">OM OSS</a></li>
+                    <li><a href="universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="gdpr/gdpr.html">GDPR</a></li>
+                    <li><a href="spill/spill.html">SPILL</a></li>
+                    <li><a href="om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
@@ -56,9 +56,9 @@
         </div>
 
 
-        <audio id="clickSound" src="audio/click.mp3"></audio>
-        <audio id="winSound" src="audio/success.mp3"></audio>
-        <audio id="celebrationSound" src="audio/celebration.mp3"></audio>
+        <audio id="clickSound" src="../audio/click.mp3"></audio>
+        <audio id="winSound" src="../audio/success.mp3"></audio>
+        <audio id="celebrationSound" src="/..audio/celebration.mp3"></audio>
     </section>
     <div id="highscore-container"></div>
 
