fikset videreføring i nav

--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -19,15 +19,15 @@
             <div class="logo">
                 <p>
 
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index/index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-                    <li><a href="gdpr/gdpr.html">GDPR</a></li>
-                    <li><a href="spill/spill.html">SPILL</a></li>
-                    <li><a href="om-oss/om-oss.html">OM OSS</a></li>
+                    <li><a href="../universiell_utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="../gdpr/gdpr.html">GDPR</a></li>
+                    <li><a href="../spill/spill.html">SPILL</a></li>
+                    <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
