--- a/spill/spill.html
+++ b/spill/spill.html
@@ -23,10 +23,10 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-                    <li><a href="gdpr/gdpr.html">GDPR</a></li>
-                    <li><a href="spill/spill.html">SPILL</a></li>
-                    <li><a href="om-oss/om-oss.html">OM OSS</a></li>
+                    <li><a href="../universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="../gdpr/gdpr.html">GDPR</a></li>
+                    <li><a href="../spill/spill.html">SPILL</a></li>
+                    <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
