--- a/spill/spill.html
+++ b/spill/spill.html
@@ -18,7 +18,7 @@
             <div class="logo">
                 <p>
 
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
