--- a/universiell-utforming/universiell_utforming.html
+++ b/universiell-utforming/universiell_utforming.html
@@ -18,7 +18,7 @@
         <nav>
             <div class="logo">
                 <p>
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
