--- a/gdpr.html
+++ b/gdpr.html
@@ -43,63 +43,70 @@
             for individuelle
             borgere i EU og Det europeiske økonomiske samarbeidsområdet (EØS).</p>
 
-        <div id="GDPR">
-            <div class="image-container">
-                <img src="bilder/GDPR-logo.png" alt="Felles bilde" id="main-image">
-                <div class="overlay"></div>
-            </div>
+        <section id="GDPR">
+            <div id="GDPR_sirkel">
+                <div class="image-container">
+                    <img src="bilder/GDPR-logo.png" alt="Felles bilde" id="main-image">
+                    <div class="overlay"></div>
+                </div>
 
-            <div class="icon-box" id="icon-box-1">
-                <i class="fa-solid fa-lock"></i>
-                <h2>Bøter av inntil 4% av omsetningen</h2>
-                <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale omsetningen
-                    eller 20 millioner euro</p>
-            </div>
+                <div class="icon-box" id="icon-box-1">
+                    <i class="fa-solid fa-lock"></i>
+                    <h2>Bøter av inntil 4% av omsetningen</h2>
+                    <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale
+                        omsetningen
+                        eller 20 millioner euro</p>
+                </div>
 
-            <div class="icon-box" id="icon-box-2">
-                <i class="fa-solid fa-globe"></i>
-                <h2>Økt territoriell omfang</h2>
-                <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av steder</p>
-            </div>
+                <div class="icon-box" id="icon-box-2">
+                    <i class="fa-solid fa-globe"></i>
+                    <h2>Økt territoriell omfang</h2>
+                    <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av steder
+                    </p>
+                </div>
 
-            <div class="icon-box" id="icon-box-3">
-                <i class="fa-solid fa-user-check"></i>
-                <h2>Samtykke er viktig!</h2>
-                <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
-            </div>
+                <div class="icon-box" id="icon-box-3">
+                    <i class="fa-solid fa-user-check"></i>
+                    <h2>Samtykke er viktig!</h2>
+                    <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
+                </div>
 
-            <div class="icon-box" id="icon-box-4">
-                <i class="fa-solid fa-lock"></i>
-                <h2>Rett til tilgang og portabilitet</h2>
-                <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
-            </div>
+                <div class="icon-box" id="icon-box-4">
+                    <i class="fa-solid fa-lock"></i>
+                    <h2>Rett til tilgang og portabilitet</h2>
+                    <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
+                </div>
 
-            <div class="icon-box" id="icon-box-5">
-                <i class="fa-solid fa-stopwatch"></i>
-                <h2>Bruddvarsel innen 72 timer</h2>
-                <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
-            </div>
+                <div class="icon-box" id="icon-box-5">
+                    <i class="fa-solid fa-stopwatch"></i>
+                    <h2>Bruddvarsel innen 72 timer</h2>
+                    <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
+                </div>
 
-            <div class="icon-box" id="icon-box-6">
-                <i class="fa-solid fa-lock"></i>
-                <h2>Personvern ved design</h2>
-                <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv tillegg</p>
-            </div>
+                <div class="icon-box" id="icon-box-6">
+                    <i class="fa-solid fa-lock"></i>
+                    <h2>Personvern ved design</h2>
+                    <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv tillegg
+                    </p>
+                </div>
 
-            <div class="icon-box" id="icon-box-7">
-                <i class="fa-solid fa-key"></i>
-                <h2>Rett til å bli glemt</h2>
-                <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes personopplysninger
-                    (og potensielt også tredjeparter)</p>
-            </div>
+                <div class="icon-box" id="icon-box-7">
+                    <i class="fa-solid fa-key"></i>
+                    <h2>Rett til å bli glemt</h2>
+                    <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes
+                        personopplysninger
+                        (og potensielt også tredjeparter)</p>
+                </div>
 
-            <div class="icon-box" id="icon-box-8">
-                <i class="fa-solid fa-user-lock"></i>
-                <h2>Obligatoriske databeskyttelsesansvarlige</h2>
-                <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
-                    GDPR-samsvar</p>
+                <div class="icon-box" id="icon-box-8">
+                    <i class="fa-solid fa-user-lock"></i>
+                    <h2>Obligatoriske databeskyttelsesansvarlige</h2>
+                    <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
+                        GDPR-samsvar</p>
+                </div>
             </div>
-        </div>
+            <div id="tekstboks_gdpr"></div>
+        </section>
 
         <br>
         <section id="personvern">
@@ -140,12 +147,22 @@
         <section id="personvern">
             <h2> Viktig i et demokratisk samfunn </h2>
             <br>
-            <p> Personvern er ikke bare en viktig menneskerettighet som skal sikre personlig integritet og respekt for personvernet. Personvern er også viktig for å sikre felles beste i et demokratisk samfunn. </p> <br>
-               <p> Uten rett til  privatliv vil ikke individer kunne  skape  et rom der de selvstendig kan reflektere og vurdere, uten innblanding eller kontroll fra andre.</p>
-                <br> <p> Utilstrekkelig personvern begrenser dermed åpen utveksling av ideer og offentlig deltakelse i det politiske liv, og setter demokratiet i fare. Noen mennesker kan være bekymret for at informasjon om deres personlige forhold vil komme frem og bli offentliggjort. Du kan også pålegge deg selv begrensninger i frykt for at myndighetene vil registrere og lagre informasjon om din kommunikasjon med andre, dine bevegelser, interesser og uttrykk.</p> <br>
-            <p> Alle har et krav på å få vite akkurat hvilke opplysninger som blir lagret om vedkommende. Noen av kravene som stilles med GDPR kan sees <a class="videreføring" href="#GDPR"> her. </a></p>
+            <p> Personvern er ikke bare en viktig menneskerettighet som skal sikre personlig integritet og respekt for
+                personvernet. Personvern er også viktig for å sikre felles beste i et demokratisk samfunn. </p> <br>
+            <p> Uten rett til privatliv vil ikke individer kunne skape et rom der de selvstendig kan reflektere og
+                vurdere, uten innblanding eller kontroll fra andre.</p>
             <br>
-            <p> Eller du kan lese mer om GDPR og personvern på <a class="videreføring" href="https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr"> lovdata.no </a></p>
+            <p> Utilstrekkelig personvern begrenser dermed åpen utveksling av ideer og offentlig deltakelse i det
+                politiske liv, og setter demokratiet i fare. Noen mennesker kan være bekymret for at informasjon om
+                deres personlige forhold vil komme frem og bli offentliggjort. Du kan også pålegge deg selv
+                begrensninger i frykt for at myndighetene vil registrere og lagre informasjon om din kommunikasjon med
+                andre, dine bevegelser, interesser og uttrykk.</p> <br>
+            <p> Alle har et krav på å få vite akkurat hvilke opplysninger som blir lagret om vedkommende. Noen av
+                kravene som stilles med GDPR kan sees <a class="videreføring" href="#GDPR"> her. </a></p>
+            <br>
+            <p> Eller du kan lese mer om GDPR og personvern på <a class="videreføring"
+                    href="https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr"> lovdata.no </a>
+            </p>
         </section>
 
 
