--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -45,7 +45,7 @@
 
         <div id="GDPR">
             <div class="image-container">
-                <img src="bilder/GDPR-logo.png" alt="Felles bilde" id="main-image">
+                <img src="../bilder/GDPR-logo.png" alt="Felles bilde" id="main-image">
                 <div class="overlay"></div>
             </div>
 
@@ -127,7 +127,7 @@
         </section>
 
 
-        <img id="arrow" src="bilder/arrow.png" alt="arrow">
+        <img id="arrow" src="../bilder/arrow.png" alt="arrow">
         <section id="cookies" class="hidden">
             <h2>Cookies</h2>
             <br>
