--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -50,62 +50,72 @@
                     <div class="overlay"></div>
                 </div>
 
-                <div class="icon icon_collection_1">
-                    <i class="fa-solid fa-lock icon icon_collection_1"></i>
+                <i class="fa-solid fa-lock icon" id="icon_collection_1"></i>
+                <i class="fa-solid fa-globe icon" id="icon_collection_2"></i>
+                <i class="fa-solid fa-user-check icon" id="icon_collection_3"></i>
+                <i class="fa-solid fa-lock icon" id="icon_collection_4"></i>
+                <i class="fa-solid fa-stopwatch icon" id="icon_collection_5"></i>
+                <i class="fa-solid fa-lock icon" id="icon_collection_6"></i>
+                <i class="fa-solid fa-key icon" id="icon_collection_7"></i>
+                <i class="fa-solid fa-user-lock" id="icon icon_collection_8"></i>
+                
+            </div>
+            <div id="gdpr_tekstboks">
+                <div>
+                    <i class="fa-solid fa-lock"></i>
                     <h2>Bøter av inntil 4% av omsetningen</h2>
                     <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale
                         omsetningen
                         eller 20 millioner euro</p>
                 </div>
 
-                <div class="icon icon_collection_2">
-                    <i class="fa-solid fa-globe icon icon_collection_2"></i>
+                <div>
+                    <i class="fa-solid fa-globe"></i>
                     <h2>Økt territoriell omfang</h2>
                     <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av steder
                     </p>
                 </div>
 
-                <div class="icon icon_collection_3">
-                    <i class="fa-solid fa-user-check icon icon_collection_3"></i>
+                <div>
+                    <i class="fa-solid fa-user-check"></i>
                     <h2>Samtykke er viktig!</h2>
                     <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
                 </div>
 
-                <div class="icon icon_collection_4">
-                    <i class="fa-solid fa-lock icon icon_collection_4"></i>
+                <div>
+                    <i class="fa-solid fa-lock"></i>
                     <h2>Rett til tilgang og portabilitet</h2>
                     <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
                 </div>
 
-                <div class="icon icon_collection_5">
-                    <i class="fa-solid fa-stopwatch icon icon_collection_5"></i>
+                <div>
+                    <i class="fa-solid fa-stopwatch"></i>
                     <h2>Bruddvarsel innen 72 timer</h2>
                     <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
                 </div>
 
-                <div class="icon icon_collection_6">
-                    <i class="fa-solid fa-lock icon icon_collection_6"></i>
+                <div>
+                    <i class="fa-solid fa-lock"></i>
                     <h2>Personvern ved design</h2>
                     <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv tillegg
                     </p>
                 </div>
 
-                <div class="icon icon_collection_7">
-                    <i class="fa-solid fa-key icon icon_collection_7"></i>
+                <div>
+                    <i class="fa-solid fa-key"></i>
                     <h2>Rett til å bli glemt</h2>
                     <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes
                         personopplysninger
                         (og potensielt også tredjeparter)</p>
                 </div>
 
-                <div class="icon icon_collection_8">
-                    <i class="fa-solid fa-user-lock icon icon_collection_8"></i>
+                <div>
+                    <i class="fa-solid fa-user-lock"></i>
                     <h2>Obligatoriske databeskyttelsesansvarlige</h2>
                     <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
                         GDPR-samsvar</p>
                 </div>
             </div>
-            <div id="gdpr_tekstboks"></div>
         </section>
 
         <br>
