--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -57,7 +57,7 @@
                 <i class="fa-solid fa-stopwatch icon" id="icon_collection_5"></i>
                 <i class="fa-solid fa-lock icon" id="icon_collection_6"></i>
                 <i class="fa-solid fa-key icon" id="icon_collection_7"></i>
-                <i class="fa-solid fa-user-lock" id="icon icon_collection_8"></i>
+                <i class="fa-solid fa-user-lock icon" id="icon_collection_8"></i>
                 
             </div>
             <div id="gdpr_tekstboks">
