--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -61,7 +61,7 @@
                 
             </div>
             <div id="gdpr_tekstboks">
-                <div>
+                <div class="hidden_box" id="icon_box_1">
                     <i class="fa-solid fa-lock"></i>
                     <h2>Bøter av inntil 4% av omsetningen</h2>
                     <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale
@@ -69,39 +69,39 @@
                         eller 20 millioner euro</p>
                 </div>
 
-                <div>
+                <div class="hidden_box" id="icon_box_2">
                     <i class="fa-solid fa-globe"></i>
                     <h2>Økt territoriell omfang</h2>
                     <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av steder
                     </p>
                 </div>
 
-                <div>
+                <div class="hidden_box" id="icon_box_3">
                     <i class="fa-solid fa-user-check"></i>
                     <h2>Samtykke er viktig!</h2>
                     <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
                 </div>
 
-                <div>
+                <div class="hidden_box" id="icon_box_4">
                     <i class="fa-solid fa-lock"></i>
                     <h2>Rett til tilgang og portabilitet</h2>
                     <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
                 </div>
 
-                <div>
+                <div class="hidden_box" id="icon_box_5">
                     <i class="fa-solid fa-stopwatch"></i>
                     <h2>Bruddvarsel innen 72 timer</h2>
                     <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
                 </div>
 
-                <div>
+                <div class="hidden_box" id="icon_box_6">
                     <i class="fa-solid fa-lock"></i>
                     <h2>Personvern ved design</h2>
                     <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv tillegg
                     </p>
                 </div>
 
-                <div>
+                <div class="hidden_box" id="icon_box_7">
                     <i class="fa-solid fa-key"></i>
                     <h2>Rett til å bli glemt</h2>
                     <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes
@@ -109,7 +109,7 @@
                         (og potensielt også tredjeparter)</p>
                 </div>
 
-                <div>
+                <div class="hidden_box active_box" id="icon_box_8">
                     <i class="fa-solid fa-user-lock"></i>
                     <h2>Obligatoriske databeskyttelsesansvarlige</h2>
                     <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
