--- a/index/index.html
+++ b/index/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="slideshow.css">
     <link rel="stylesheet" href="index.css">
+    <script src="nav.js"></script>
+
     <title>SoMe-prosjekt</title>
 
 </head>
-
-
 
 <body>
     <header>
@@ -32,6 +32,7 @@
                     <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
+        <div class="nav-toggle">&#9776;</div> 
         </nav>
     </header>
 
