--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -19,15 +19,15 @@
             <div class="logo">
                 <p>
 
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="../universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="spill.html">SPILL</a></li>
-                    <li><a href="om-oss.html">OM OSS</a></li>
+                    <li><a href="../spill.html">SPILL</a></li>
+                    <li><a href="../om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
@@ -110,10 +110,12 @@
                 </div>
 
                 <div class="hidden_box active_box" id="icon_box_8">
-                    <i class="fa-solid fa-user-lock"></i>
                     <h2>Obligatoriske databeskyttelsesansvarlige</h2>
-                    <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
-                        GDPR-samsvar</p>
+                    <div class="box_grid">
+                        <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
+                            GDPR-samsvar</p>
+                        <i class="fa-solid fa-user-lock"></i>
+                    </div>
                 </div>
             </div>
         </section>
