--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -18,15 +18,15 @@
         <nav>
             <div class="logo">
                 <p>
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="../universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                    <li><a href="../universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="../spill.html">SPILL</a></li>
-                    <li><a href="../om-oss.html">OM OSS</a></li>
+                    <li><a href="../spill/spill.html">SPILL</a></li>
+                    <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
@@ -57,58 +57,73 @@
                 <i class="fa-solid fa-lock icon" id="icon_collection_6"></i>
                 <i class="fa-solid fa-key icon" id="icon_collection_7"></i>
                 <i class="fa-solid fa-user-lock icon" id="icon_collection_8"></i>
-                
+
             </div>
             <div id="gdpr_tekstboks">
                 <div class="hidden_box" id="icon_box_1">
-                    <i class="fa-solid fa-lock"></i>
                     <h2>Bøter av inntil 4% av omsetningen</h2>
-                    <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale
-                        omsetningen
-                        eller 20 millioner euro</p>
+                    <div class="box_grid">
+                        <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale
+                            omsetningen eller 20 millioner euro</p>
+                        <i class="fa-solid fa-lock"></i>
+                    </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_2">
-                    <i class="fa-solid fa-globe"></i>
                     <h2>Økt territoriell omfang</h2>
-                    <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av steder
-                    </p>
+                    <div class="box_grid">
+                        <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av
+                            steder
+                        </p>
+                        <i class="fa-solid fa-globe"></i>
+                    </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_3">
-                    <i class="fa-solid fa-user-check"></i>
                     <h2>Samtykke er viktig!</h2>
-                    <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
+                    <div class="box_grid">
+                        <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
+                        <i class="fa-solid fa-user-check"></i>
+                    </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_4">
-                    <i class="fa-solid fa-lock"></i>
                     <h2>Rett til tilgang og portabilitet</h2>
-                    <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
+                    <div class="box_grid">
+                        <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
+                        <i class="fa-solid fa-lock"></i>
+                    </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_5">
-                    <i class="fa-solid fa-stopwatch"></i>
                     <h2>Bruddvarsel innen 72 timer</h2>
-                    <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
+                    <div class="box_grid">
+                        <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
+                        <i class="fa-solid fa-stopwatch"></i>
+                    </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_6">
-                    <i class="fa-solid fa-lock"></i>
                     <h2>Personvern ved design</h2>
-                    <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv tillegg
-                    </p>
+                    <div class="box_grid">
+                        <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv
+                            tillegg
+                        </p>
+                        <i class="fa-solid fa-lock"></i>
+                    </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_7">
-                    <i class="fa-solid fa-key"></i>
                     <h2>Rett til å bli glemt</h2>
-                    <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes
-                        personopplysninger
-                        (og potensielt også tredjeparter)</p>
+                    <div class="box_grid">
+                        <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes
+                            personopplysninger
+                            (og potensielt også tredjeparter)</p>
+                        <i class="fa-solid fa-key"></i>
+                    </div>
                 </div>
 
-                <div class="hidden_box active_box" id="icon_box_8">
+                <div class="hidden_box" id="icon_box_8">
                     <h2>Obligatoriske databeskyttelsesansvarlige</h2>
                     <div class="box_grid">
                         <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
