--- a/spill/spill.html
+++ b/spill/spill.html
@@ -18,7 +18,7 @@
             <div class="logo">
                 <p>
 
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
@@ -32,6 +32,12 @@
         </nav>
     </header>
     <section id="memory-game">
+
+        <div id="highscore-container">
+            <h1>Highscore:</h1>
+            <p>Navn: <span id="hs-name"></span></p>
+            <p>Tid: <span id="hs-score"></span></p>
+        </div>
 
         <div class="instructions">
             <h2> Memory-game: </h2>
@@ -58,9 +64,8 @@
 
         <audio id="clickSound" src="../audio/click.mp3"></audio>
         <audio id="winSound" src="../audio/success.mp3"></audio>
-        <audio id="celebrationSound" src="/..audio/celebration.mp3"></audio>
+        <audio id="celebrationSound" src="../audio/celebration.mp3"></audio>
     </section>
-    <div id="highscore-container"></div>
 
     <main>
         <section id="fenomen_section">
