js på index siden

--- a/index/index.html
+++ b/index/index.html
@@ -133,7 +133,12 @@
                 </p>
             </div>
 
-            <div>
+            <div id="paragraf"> 
+                <i class="fa-solid fa-section"></i>
+                <i class="fa-solid fa-angles-down"></i>
+            </div>
+
+            <div id="ulovlig">
                 <h2> Mobbing er ulovlig </h2>
 
                 <p> Nettmobbing er slik som all annen mobbing ulovlig. Mobbing på nett kan rammes av straffeloven § 266
@@ -219,7 +224,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="lesmer.js"></script>
 </body>
 
 </html>
