forsøk på noe media queries

--- a/spill/spill.html
+++ b/spill/spill.html
@@ -33,6 +33,7 @@
     </header>
     <section id="memory-game">
 
+        <div class="game-boxes">
         <div id="highscore-container">
             <h1>Highscore:</h1>
             <p>Navn: <span id="hs-name"></span></p>
@@ -40,11 +41,12 @@
         </div>
 
         <div class="instructions">
-            <h2> Memory-game: </h2>
+            <h1> Memory-game: </h1>
             Klikk på kortene for å flippe de. Det er om å gjøre å parre opp alle de like kortene, med færrest mulig
             trekk. <br>
             Lykke til!
         </div>
+    </div>
 
         <div class="wrapper">
             <div class="stats-container">
