--- a/universiell-utforming/universiell_utforming.html
+++ b/universiell-utforming/universiell_utforming.html
@@ -32,9 +32,12 @@
         </nav>
     </header>
 
+    <section id="hero">
+        <h1> UNIVERSELL UTFORMING </h1>
+    </section>
+
     <main class="uu">
         <section>
-            <h1> UNIVERSELL UTFORMING </h1>
             <button onclick="myFunction()">Lys/Mørk</button>
             <h2> Hva er universell utforming? </h2>
             <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
