game hero og cursor poiner på kort

--- a/spill/spill.html
+++ b/spill/spill.html
@@ -31,17 +31,22 @@
             </div>
         </nav>
     </header>
+
+    <section id="hero">
+        <h1> Memory Game </h1>
+    </section>
+
     <section id="memory-game">
 
         <div class="game-boxes">
         <div id="highscore-container">
-            <h1>Highscore:</h1>
+            <h2>Highscore:</h2>
             <p>Navn: <span id="hs-name"></span></p>
             <p>Tid: <span id="hs-score"></span></p>
         </div>
 
         <div class="instructions">
-            <h1> Memory-game: </h1>
+            <h2> Memory-game: </h2>
             Klikk på kortene for å flippe de. Det er om å gjøre å parre opp alle de like kortene, med færrest mulig
             trekk. <br>
             Lykke til!
@@ -71,7 +76,7 @@
 
     <main>
         <section id="fenomen_section">
-            <h2>Fenomener på sosiale medier</h2>
+            <h2 class="fenomentitle">Fenomener på sosiale medier</h2>
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
