--- a/spill/spill.html
+++ b/spill/spill.html
@@ -33,7 +33,7 @@
     </header>
 
     <section id="hero">
-        <h1> Memory Game </h1>
+        <h1> Memory & Flip kort </h1>
     </section>
 
     <section id="memory-game">
